# wbMultiCrew

./: .gitignore  code_sections.md  hello.html  section_structure.json  section_structure11.json  section_structure22.json
wbmulticrew/: Contact.css  Contact.html  Contact.js  Home.css  Home.html  Home.js  Homecopy.css  Homecopy.html  README.md  all_css_code.css  all_html_code.html  all_js_code.js  azure_speech_test.py  conversation.json  pyproject.toml  website_code1response.md
wbmulticrew/hello/final_code_files/: about.html  contact.html  index.html
wbmulticrew/src/wbmulticrew/: Home.html  async_for_test.py  block_based_test.py  chatbot_app.py  claude_image.py  conversation2.json  crew.py  descriptions_writer.py  folder_maker.py  gpt4 call.py  gpt4-1.css  gpt4-1.js  gpt4o_test.py  gpt4o_website_chat.py  gpt4output.json  groq-1.js  groqchat.py  indexnew4o.html  main backup before gpt4o.py  main.py  main2.py  main222bilal.py  main_backup.py  main_with_coding_crew.py  main_working_7_june  maingpt4o2.py  page_code.py  parse_json.py  prompts.md  sample.json  sample_main.py  section_briefs.py  section_code.py  section_design_crew.py  user_req.py  user_requirements_crew.py  website_code1response.md  workflow.md  workflow2.md
wbmulticrew/test14_pharma_new/: website_structure.json
wbmulticrew/test15_coffee/: user_requirements.md  website_design_brief.md  website_structure.json
wbmulticrew/test1_222bilal/: user_requirements.md
wbmulticrew/test_3page/: website_structure.json
wbmulticrew/wbmulticrew_test4/: output2.txt  user_requirements.md  website_design_brief.md
(+776 files in other folders)
