[tool.poetry]
name = "wbmulticrew"
version = "0.1.0"
description = "wbmulticrew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}
langchain-groq = "^0.1.3"

[tool.poetry.scripts]
wbmulticrew = "wbmulticrew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"