[tool.poetry]
name = "wbmulticrew"
version = "0.1.0"
description = "wbmulticrew using crewAI"
authors = ["Muhammad Bilal Moten "]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools", "agentops"], version = "^0.30.11"}
langchain-groq = "^0.1.3"
anthropic = "^0.25.7"
html2image = "^2.0.4.3"
agentops = "^0.2.0"

[tool.poetry.scripts]
wbmulticrew = "wbmulticrew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"